--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 server.port = 80
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:dcbapp
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+# spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:dcbapp
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=password
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dcbapp
+spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
